--- a/src/components/amigo-sangue/AmigoSangue.css
+++ b/src/components/amigo-sangue/AmigoSangue.css
@@ -1,37 +1,107 @@
 .amigo-sangue{
+    position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: hidden;
     display: flex;
-    background-color: #FFF;
+    flex-direction: column;
+    background-color: #193c99;
 }
 
 .amigo-sangue-container{
+    flex: 1;
     display: flex;
     font-size: 1.5rem;
-    padding: 170px 40px;
+    padding: 120px;
+}
+.amigo-sangue-projeto{
+    background-color: #FFF;
+    height: auto;
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
 }
 .amigo-sangue-img{
     flex: 1;
+    flex-grow: 1;
+    z-index: 2;
+}
+.amigo-sangue .blob{
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    right: -20%;
+    z-index: 0;
+    transform: translateY(-50%);
+}
+.amigo-sangue .blob.main{
+    z-index: 1;
 }
 .amigo-sangue-info{
-    flex: 1;
-    padding-left: 40px;
+    height: auto;
+    width: 40%;
+    gap: 24px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px 80px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .amigo-sangue-img img{
-    width: 90%;
-}
-.amigo-sangue-container h2{
-    padding-left: 20px;
-}
-.amigo-sangue-container .cards{
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    width: 100%;
 }
 
-.amigo-sangue-container .card{
-    flex:1;
-    padding: 10px;
+.amigo-sangue-container .amigo-sangue-card{
+    display: flex;
+    min-height: 90vh;
+    height: fit-content;
+    border-radius: 12px;
+    overflow: hidden;
+    
     border-radius: 5px;
-    border: 1px solid #000;
+}
+.amigo-sangue-container .amigo-sangue-card ul{
+    text-align: left;
+    width: 100%;
+    align-self: flex-start;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.amigo-sangue-container .amigo-sangue-card h3{
+    margin-top: 32px;
+    align-self: flex-start;
+}
+.amigo-sangue-container .amigo-sangue-card li{
+    background-color: greenyellow;
+    border-radius: 8px;
+    padding: 4px 8px;
+    padding-right: 24px;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    padding-left: 12px;
+}
+.amigo-sangue-container .amigo-sangue-card button{
+    font-size: 1rem;
+    width: 100%;
+    padding: 12px 0px;
+    background-color: #007a86;
+    border: none;
+    border-radius: 8px;
+    color: #FFF;
+    cursor: pointer;
+    transition: .3s;
+}
+.amigo-sangue-container .amigo-sangue-card button:hover{
+    outline: 1px solid #007a86;
+    background-color: #FFF;
+    color: #007a86;
 }
