--- a/src/components/quem-somos/QuemSomos.css
+++ b/src/components/quem-somos/QuemSomos.css
@@ -1,24 +1,100 @@
 .quem-somos{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    background-color: #aeddfc;
+    background-color: #193c99;
 }
 .quem-somos-container{
     display: flex;
+    flex: 1;
+    padding-top: 140px;
     align-items: center;
-    padding-inline: 40px;
+    padding-inline: 120px;
+}
+.quem-somos-container .quem-somos-header{
+  font-size: 1.5rem;
 }
 .quem-somos-container .quem-somos-card{
-    flex: 1;
     display: flex;
-    align-items: center;
+    height: 100%;
+    max-width: 640px;
+    flex: 1;
+    align-items: flex-start;
     justify-content: center;
+    -webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .quem-somos-container .quem-somos-card img{
-    width: 80%;
+  position: sticky;
+  top: 25%;
+    width: 90%;
+    filter: drop-shadow(0 0 0.75rem rgb(239, 181, 245));
 }
 .quem-somos-container .quem-somos-info{
+    max-width: 800px;
+    font-size: 1.1rem;
+    padding: 40px 20px;
     flex: 1;
-    font-size: 1.5rem;
+    display: flex;
+    margin-inline: auto;
+    flex-direction: column;
+    color: #FFF;
+    gap: 15px;
 }
+.quem-somos-container .quem-somos-info .quem-somos-cards{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  color: #000;
+}
+.quem-somos-infoCard{
+  flex: 1;
+  padding: 40px;
+  display: flex;
+  background-color: #FFF;
+  flex-direction: column;
+  border-radius: 12px;
+  
+}
+.quem-somos-infoCard h2{
+  margin-bottom: 12px;
+}
+.quem-somos-infoCard ul{
+  gap: 8px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  flex-direction: row;
+  list-style: none;
+}
+.quem-somos-infoCard li{
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+} 
+
+
+
+@-webkit-keyframes tilt-in-top-1 {
+    0% {
+      -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+              transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+              transform: rotateY(0deg) translateY(0) skewY(0deg);
+      opacity: 1;
+    }
+  }
+  @keyframes tilt-in-top-1 {
+    0% {
+      -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+              transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+              transform: rotateY(0deg) translateY(0) skewY(0deg);
+      opacity: 1;
+    }
+  }
