--- a/src/components/amigo-sangue/AmigoSangue.css
+++ b/src/components/amigo-sangue/AmigoSangue.css
@@ -11,8 +11,14 @@
 .amigo-sangue-container{
     flex: 1;
     display: flex;
-    font-size: 1.5rem;
+    flex-direction: column;
+    font-size: 1.2rem;
     padding: 120px;
+}
+.amigo-sangue-container #title{
+    color: #FFF;
+    font-size: 2rem;
+    margin-bottom: 12px;
 }
 .amigo-sangue-projeto{
     background-color: #FFF;
@@ -22,8 +28,10 @@
     overflow: hidden;
 }
 .amigo-sangue-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 1;
-    flex-grow: 1;
     z-index: 2;
 }
 .amigo-sangue .blob{
@@ -55,6 +63,7 @@
 }
 .amigo-sangue-img img{
     width: 100%;
+    height: fit-content;
 }
 
 .amigo-sangue-container .amigo-sangue-card{
