--- a/src/components/main-section/MainSection.css
+++ b/src/components/main-section/MainSection.css
@@ -1,5 +1,6 @@
 .main-section{
     width: 100%;
+    max-width: 100vw;
     height: 100vh;
     display: flex;
     background-color: #FFF;
@@ -37,8 +38,7 @@
 .main-section-container .main-frase p{
   margin-top: 24px;
   font-size: 1.5rem;
-  min-width: 845px;
-  max-width: 50%;
+  max-width: 864px;
 }
 
 .main-section-container .main-frase span{
@@ -95,7 +95,7 @@
 
   .main-section-container .wave{
     position: absolute;
-    bottom: -120px;
+    bottom: -70px;
     left: 0;
     z-index: 1;
   }
