--- a/src/components/main-section/MainSection.css
+++ b/src/components/main-section/MainSection.css
@@ -48,7 +48,7 @@
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 5px;
+    padding: 2px 4px;
     font-weight: 600;
     width: fit-content;
 }
