--- a/src/components/amigo-sangue/AmigoSangue.css
+++ b/src/components/amigo-sangue/AmigoSangue.css
@@ -65,6 +65,9 @@
     width: 100%;
     height: fit-content;
 }
+.amigo-sangue-info h1{
+    font-size: 2.5em;
+}
 
 .amigo-sangue-container .amigo-sangue-card{
     display: flex;
